// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <MedicationsDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <MedicationsDetailPanel
      editedPanel={
        Object {
          "medicationPanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="medicationPanel"
      title="Medication"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Name
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Dose Descriptions
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    13-Nov-2017
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </MedicationsDetailPanel>
  </div>
</div>
`;

exports[`Component <MedicationsDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "medicationPanel": true,
        }
      }
      isBtnShowPanel={true}
      isEditButton={true}
      isOpen={false}
      isShowControlPanel={true}
      name="medicationPanel"
      title="Edit Medication"
    >
      <ReduxForm
        detail={
          Object {
            "author": "bob.smith@gmail.com",
            "dateCreated": 1510588832000,
            "doseAmount": "50",
            "doseDirections": "test",
            "doseTiming": "50",
            "medicationCode": 123456789,
            "medicationTerminology": "external",
            "name": "test",
            "route": "test",
            "source": "marand",
            "sourceId": "a7007401-837f-471c-8f73-cbb53c0eb1a1",
            "startDate": 1510653645000,
            "startTime": 36045000,
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <MedicationsDetail /> should renders correctly with different state of props 3`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "prescriptionPanel": true,
        }
      }
      isBtnShowPanel={true}
      isEditButton={true}
      isOpen={false}
      isShowControlPanel={true}
      name="prescriptionPanel"
      title="Edit Prescription (1)"
    >
      <ReduxForm
        detail={
          Object {
            "author": "bob.smith@gmail.com",
            "dateCreated": 1510588832000,
            "doseAmount": "50",
            "doseDirections": "test",
            "doseTiming": "50",
            "medicationCode": 123456789,
            "medicationTerminology": "external",
            "name": "test",
            "route": "test",
            "source": "marand",
            "sourceId": "a7007401-837f-471c-8f73-cbb53c0eb1a1",
            "startDate": 1510653645000,
            "startTime": 36045000,
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;
